--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,3 @@
-[package]
-name = "bro"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-rustacuda = "0.1.3"
-axum = "0.8.4"
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+[workspace]
+members = ["server", "gpu"]
+resolver = "2"
