--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,3 +15,5 @@ serde_json = "1"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
 anyhow = "1"
 gpu = { path = "../gpu", default-features = false }
+sha2 = "0.10"
+hex = "0.4"
