--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ axum = "0.8.4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+chrono = "0.4"
